--- a/style.css
+++ b/style.css
@@ -1,55 +1,72 @@
 /* common style start*/
-:root{
+:root {
     --poppins: 'Poppins', sans-serif;
     --inter: 'Inter', sans-serif;
     --manrope: 'Manrope', sans-serif;
-    --primary-color:#E02C6D;
-    --secondary-color:#3a3a3a;
+    --roboto:'Roboto', sans-serif;
+    --primary-color: #E02C6D;
+    --secondary-color: #3a3a3a;
 }
 
-*{
-    margin: 10px;
+* {
+    margin: 0;
     padding: 0;
-    box-sizing: border-box;    
+    box-sizing: border-box;
 }
+
+.divider {
+    width: 1110px;
+    margin: 0 auto;
+    height: 1px;
+    flex-shrink: 0;
+    background: linear-gradient(90deg, rgba(192, 204, 218, 0.10) 0%, rgba(192, 204, 218, 0.60) 50.38%, rgba(192, 204, 218, 0.10) 100%);
+}
+
 /* common style end*/
 
 
 
 /* header section start */
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
+    max-width: 1190px;
 }
-.header-title{
+
+.header-title {
     font-family: var(--poppins);
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--secondary-color);
 }
-.nav-bar ul li{
-    font-family: var(--poppins);
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: normal;
-    /* margin-inline: 1rem; */
-}
-.nav-bar ul li img{
-    margin: 0;
-}
-.nav-bar{
-    margin: 0;
-}
-nav > .nav-bar > ul{
+
+nav>.nav-bar>ul {
     list-style: none;
     display: flex;
     align-items: center;
     gap: 34px;
 }
-nav .nav-bar ul li i{
+
+nav .nav-bar ul li i {
     font-size: 1.5rem;
+}
+
+.nav-bar ul li {
+    font-family: var(--poppins);
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: normal;
+    margin-inline: 0rem;
+}
+
+.nav-bar {
+    margin: 0;
+}
+
+.nav-bar ul li img {
+    margin: 0;
 }
 
 /* header section end */
@@ -58,14 +75,201 @@ nav .nav-bar ul li i{
 
 /* main section start*/
 /* hero section start*/
+.hero-container {
+    max-width: 1190px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 70px;
+    margin: 0 auto;
+}
+
+.hero {
+    max-width: 582px;
+    width: 100%;
+    margin-top: 145px;
+    margin-inline: 0;
+}
+
+.hero-title {
+    margin: 0;
+    font-size: 3.25rem;
+    font-family: var(--poppins);
+    color: var(--secondary-color);
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.hero-description {
+    font-family: var(--poppins);
+    color: var(--secondary-color);
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    margin-bottom: 1rem;
+}
+
+.hero-btn {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+    background-color: var(--primary-color);
+    border-radius: 41px;
+    max-width: 196px;
+    width: 100%;
+    transition: 1s;
+    cursor: pointer;
+    margin-left: 0;
+}
+
+.prebook-btn {
+    background-color: transparent;
+    font-size: 1rem;
+    color: white;
+    text-transform: capitalize;
+    font-weight: 700;
+    margin: 0;
+    border: 0;
+    padding: 10px 0px 10px 24px;
+    overflow: hidden;
+    border-radius: 41px;
+    cursor: pointer;
+}
+
+.hero-btn:hover {
+    background-color: #2c0c18;
+}
+
+.hero-btn i {
+    font-size: 1.5rem;
+    margin: 0;
+    color: white;
+    padding-right: 24px;
+}
+
+.hero-img {
+    background-image: url(images/circle-design.svg);
+    margin-left: 133px;
+    /* padding: 15px; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-top: 80px;
+}
 
 /* hero section end*/
 
 
 
+/* sponsor section start */
+.sponsor {
+    margin-top: 35px;
+    display: flex;
+    flex-direction: row;
+    max-width: 1190px;
+    width: 100%;
+    margin-bottom: 33px;
+    margin: 0 auto;
+}
+.sponsor img{
+    margin: 0 auto;
+}
+/* sponsor section end */
+
 
 /* products section start*/
+.products-container{
+    max-width: 1050px;
+    width: 100%;
+    margin: 100px auto 0 auto;
+}
+.products-header h1 {
+    font-size: 1.75rem;
+    font-weight: 600;
+    font-family: var(--poppins);
+    color: var(--secondary-color);
+    line-height: 70px;
+    text-transform: capitalize;
+    text-align: center;
+}
+.porducts-cards{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    gap: 30px;
+}
+.card{
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    transition: 1200ms;
+    display: flex;
+    flex-direction: column;
+}
+.card:hover{
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.35);
+    transform: scale(1.1)
+}
+.card img{
+    margin: 1rem;
 
+}
+.card h3{
+    font-size: 1.75rem;
+    font-family: var(--poppins);
+    font-weight: 500;
+    line-height: 40px;
+    margin-left: 1rem;
+}
+.card h5{
+    margin-top: 0.375rem;
+    font-size: 1.5rem;
+    font-family: var(--inter);
+    font-weight: 400;
+    line-height: 150%;
+    margin-left: 1rem;
+    margin-bottom: 0.5rem;
+}
+.card .ratings{
+    display: flex;
+    font-family: var(--roboto);
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0 -1px 0 1rem;
+    height: 1rem;
+}
+.card .ratings img{
+    margin: 0 ;
+    height: 1rem;
+    width: 1rem;
+}
+.card p{
+    color: #787885;
+    font-family: var(--roboto);
+    font-size: 0.875rem;
+    line-height: 143%;
+    letter-spacing: 0.252px;
+    max-width: 196px;
+    font-weight: 700;
+    width: 100%;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 3px;
+}
+.products-container .card-footer{
+    display: flex;           
+    flex-direction: row;
+    justify-content: flex-end;
+}
+.products-container .card-footer button{
+    margin-top: 50px;
+    border: 0;
+    font-family: var(--poppins);
+    color: rgba(224, 44, 109, 0.87);
+    cursor: pointer;
+    background: transparent;
+    font-size: 1rem;font-weight: 700;
+    text-transform: capitalize;
+
+}
 /* products section  end*/
 
 
@@ -79,14 +283,15 @@ nav .nav-bar ul li i{
 
 
 /* footer section start*/
-.footer-container{
+.footer-container {
     background-color: #0a0826;
     color: white;
     display: flex;
     flex-direction: column;
     text-align: center;
 }
-.footer-title{
+
+.footer-title {
     font-size: 1.5rem;
     line-height: normal;
     font-weight: 700;
@@ -94,18 +299,21 @@ nav .nav-bar ul li i{
     padding: 50px 0 0 0;
 
 }
-.footer-description{
+
+.footer-description {
     line-height: 24px;
     font-size: 0.878rem;
     font-family: var(--manrope);
     font-weight: 700;
     margin: 3px auto;
 }
-.footer-media{
+
+.footer-media {
     font-size: 32px;
     margin: 17px 0 50px 0;
 }
-.footer-icon{
+
+.footer-icon {
     padding: 8px;
 }
 
