--- a/style.css
+++ b/style.css
@@ -7,13 +7,11 @@
     --primary-color: #E02C6D;
     --secondary-color: #3a3a3a;
 }
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 .divider {
     width: 1110px;
     margin: 0 auto;
@@ -21,7 +19,6 @@
     flex-shrink: 0;
     background: linear-gradient(90deg, rgba(192, 204, 218, 0.10) 0%, rgba(192, 204, 218, 0.60) 50.38%, rgba(192, 204, 218, 0.10) 100%);
 }
-
 /* common style end*/
 
 
@@ -33,26 +30,23 @@ nav {
     flex-direction: row;
     align-items: center;
     max-width: 1190px;
+    margin: 87px auto 0 auto;
 }
-
 .header-title {
     font-family: var(--poppins);
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--secondary-color);
 }
-
 nav>.nav-bar>ul {
     list-style: none;
     display: flex;
     align-items: center;
     gap: 34px;
 }
-
 nav .nav-bar ul li i {
     font-size: 1.5rem;
 }
-
 .nav-bar ul li {
     font-family: var(--poppins);
     font-size: 1rem;
@@ -60,18 +54,13 @@ nav .nav-bar ul li i {
     line-height: normal;
     margin-inline: 0rem;
 }
-
 .nav-bar {
     margin: 0;
 }
-
 .nav-bar ul li img {
     margin: 0;
 }
-
 /* header section end */
-
-
 
 /* main section start*/
 /* hero section start*/
@@ -83,14 +72,12 @@ nav .nav-bar ul li i {
     padding-bottom: 70px;
     margin: 0 auto;
 }
-
 .hero {
     max-width: 582px;
     width: 100%;
     margin-top: 145px;
     margin-inline: 0;
 }
-
 .hero-title {
     margin: 0;
     font-size: 3.25rem;
@@ -99,7 +86,6 @@ nav .nav-bar ul li i {
     font-weight: 700;
     margin-bottom: 1rem;
 }
-
 .hero-description {
     font-family: var(--poppins);
     color: var(--secondary-color);
@@ -108,7 +94,6 @@ nav .nav-bar ul li i {
     margin: 0;
     margin-bottom: 1rem;
 }
-
 .hero-btn {
     display: flex;
     flex-direction: row;
@@ -122,7 +107,6 @@ nav .nav-bar ul li i {
     cursor: pointer;
     margin-left: 0;
 }
-
 .prebook-btn {
     background-color: transparent;
     font-size: 1rem;
@@ -136,18 +120,15 @@ nav .nav-bar ul li i {
     border-radius: 41px;
     cursor: pointer;
 }
-
 .hero-btn:hover {
     background-color: #2c0c18;
 }
-
 .hero-btn i {
     font-size: 1.5rem;
     margin: 0;
     color: white;
     padding-right: 24px;
 }
-
 .hero-img {
     background-image: url(images/circle-design.svg);
     margin-left: 133px;
@@ -156,9 +137,7 @@ nav .nav-bar ul li i {
     background-size: contain;
     margin-top: 80px;
 }
-
 /* hero section end*/
-
 
 
 /* sponsor section start */
@@ -192,7 +171,7 @@ nav .nav-bar ul li i {
     text-transform: capitalize;
     text-align: center;
 }
-.porducts-cards{
+.products-cards{
     display: grid;
     grid-template-columns: repeat(3 , 1fr);
     gap: 30px;
@@ -273,7 +252,6 @@ nav .nav-bar ul li i {
 /* products section  end*/
 
 /* featured section start*/
-
 .featured-container{
     max-width: 1190px;
     width: 100%;
@@ -312,7 +290,7 @@ nav .nav-bar ul li i {
 }
 .btn-join p{
     font-size: 1rem;
-    
+
 }
 .join-now{
     border: 0 transparent;
@@ -328,7 +306,6 @@ nav .nav-bar ul li i {
 }
 /* featured section end*/
 /* main section end*/
-
 
 
 /* footer section start*/
@@ -365,9 +342,7 @@ nav .nav-bar ul li i {
 .footer-icon {
     padding: 8px;
 }
-
 /* footer section end*/
-
 
 
 
