--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,7 @@
 
 /* responsive style mobile start*/
 @media screen and (max-width:570px) {
+    /* nav bar start  */
     nav {
         justify-content: center;
         flex-direction: column;
@@ -23,6 +24,42 @@
     .nav-bar ul li img {
         height: 1.5rem;
         width: 1.5rem;
+    }
+    /* hero section start */
+    .hero-container {
+        max-width: 460px;
+        flex-direction: column-reverse;
+        padding-bottom: 53px;
+    }
+    .hero {
+        max-width: 460px;
+        margin-top: 30px;
+    }
+    .hero-title {
+        font-size: 1.75rem;
+        text-align: center;
+    }
+    .hero-description {
+        text-align: center;
+        font-weight: 500;
+        font-size: 14px;
+        margin-bottom: 1rem;
+    }
+    .hero-btn {
+        margin: 0 auto;
+    }
+    .prebook-btn {
+        font-weight: 500;
+    }
+    .hero-btn:hover {
+        background-color: #9e9e1f;
+    }
+    .hero-img{
+      margin-top: 25px;
+    }
+    .hero-img img{
+      height: 202px;
+      width: 190px;
     }
 }
 /* responsive style mobile end*/
